added sklearn indexing and skipgrams

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /code/assign1/index_df.pkl
 /code/assign1/vocab_list.pkl
 
+/code/assign1/lisp.pkl
+/code/assign1/index_df1.pkl
+/code/assign1/index_df2.pkl
+/code/assign1/pipeline.pkl
